--- a/hw/homework/hw_1/recipe.css
+++ b/hw/homework/hw_1/recipe.css
@@ -1,35 +1,42 @@
 body {
+	width: 1024px;
 	font-family: Georgia, Garamond, serif;
 	font-size: 11pt;
 	color: #404040;
-	background-image: url(http://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/silverware.jpg);
+	background-image: url(images/silverware.jpg);
 }
 
 
 h1 {
-	font-family: Century Gothic, Futura, Verdana;
+	font-family: "Century Gothic", Futura, Verdana;
 	font-size: 22pt;
-	font-style: bold;
 	text-align: center;
 }
 
 
 h2 {
-	font-family: SimSun;
 	font-size: 18pt;
-	text-decoration: underline;
+	font-family: Serif;
 }
 
 
 h1, h2 {
 	background-color: #F0F0F0;
 	color: #A4A400;
+	text-decoration: underline;
+	letter-spacing: 0.2em;
 }
 
+.first {
+	list-style: none;
+	padding-left: 0px;
+}
 
 .p {
 	background-color: #FFFFC8;
 	font-style: oblique;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 
@@ -42,4 +49,10 @@ a {
 	color: #A4A400;
 }
 
+a img {
+	border: none;
+}
 
+li li {
+	list-style-image: url(images/pie_icon.gif);
+}
