--- a/hw/homework/hw_01/index.css
+++ b/hw/homework/hw_01/index.css
@@ -15,31 +15,21 @@ h1 {
 #p1 {
 	font-family: "Century Gothic", Futura, Verdana;
 	text-align: center;
-	color: gray;
-	background-color: LightBlue;
+	color: green;
 	font-size: 1.5em;
 	margin-bottom: 0px;
 }
 
-#p2 {
+#p2, #p3{
 	font-family: "Century Gothic", Futura, Verdana;
-	color: #A4A400;
+	color: red;
 	text-align: center;
 	font-size: 1.5em;
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
 
-#p3 {
-	font-family: "Century Gothic", Futura, Verdana;
-	color: #A4A400;
-	text-align: center;
-	font-size: 1.5em;
-	margin-top: 0px;
-	margin-bottom: 0px;
-}
-
-#p4, #p5 {
+#p4 {
 	font-family: "Century Gothic", Futura, Verdana;
 	color: #008000;
 	font-size: 1.5em;
