--- a/hw/lab/lab_02/journal_layout.css
+++ b/hw/lab/lab_02/journal_layout.css
@@ -1,63 +1,57 @@
 body {
 	background-image: url(images/background.gif);
-	margin-left: 10%;
-	margin-right: 10%;
-	/*背景间距问题未决*/
 }
 
 .green {
 	border: 10px white solid;
 	background-color: white;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 .red {
-	text-align: right;
 	background-color: #A8F0F0;
+	text-align: right;
 }
 
-.yellow {
-	font-size: 14px; 
+.red h2 {
+	font-size: 14px;
 }
 
 .blue {
 	border: 4px #C2E9E9 solid;
 	background-color: #E8FBFB;
-		margin-top: 10px;
-	margin-bottom: 0px;
-	margin-right: 0px;
-	margin-left: 0px;
+    margin-top: 10px;
 	padding: 5px;
+	overflow: hidden;
+	margin-left: 140px;
+}
+
+.blue span {
+	border-bottom: 2px #009097 dashed;
 }
 
 .blue img {
 	float: right;
 }
 
-#blue1 {
-	height: 10em;
-}
-
-#blue2 {
-	height: 13em;
-}
-.purple {
-	border-bottom: 2px #009097 dashed;
-}
-
 .left {
-	position: absolute;
-	border: 4px #C2E9E9 solid;
-	margin-top: 1em;
-	padding-left: 5px;
-	width: 200px;
-	background-image: url(images/background.gif);
+	float: left;
+	width: 120px;
+	border: 5px #C2E9E9 solid;
+	background-color: #E8FBFB;
+	margin-top: 10px;
+	margin-right: -100%; 
+	padding-left: 3px;
 }
 
 .right {
-	margin-left: 220px; 
+	float: left;
+	width: 100%;
 }
 
-#hover:hover {
-	color: yellow;
+.clear {
+	clear: both;
 }
-img:hover {background-color: yellow;}
+
+.hover:hover {color: yellow;}
