--- a/hw/homework/hw_02/movie.css
+++ b/hw/homework/hw_02/movie.css
@@ -1,113 +1,127 @@
 body {
 	background-image: url(images/background.png);
-	font-size: 8pt;
 	font-family: Verdana, Tahoma;
-	margin: 0px;
+	font-size: 8pt;
 	padding: 0px;
+	margin: 0px;
 }
 
-.first {
+img {
+	margin-bottom: -2px;
+} /*避免图片下方默认产生的2px*/
+
+#headimg {
 	text-align: center;
 	background-image: url(images/bannerbackground.png);
 }
 
 h1 {
-	text-align: center;
-	font-size: 24pt;
 	font-family: Tahoma, Verdana;
+	font-size: 24pt;
+	text-align: center;
 }
 
-.body {
+#container {
 	border: 4px gray solid;
 	width: 800px;
 	margin: auto;
-	height: 964px;
 }
 
-.two { height: 940px; margin: 0px}
-
-.left {
-	width: 550px;
-	margin: 0px
-	float: left;
-}
-
-.right {
+#right {
 	float: right;
 	width: 250px;
-	font-size: 8pt;
-	font-family: Arial;
-	background-color: #A2B964;
-	margin: 0px;
 }
 
-.intro {
-	margin: 10px;
+#content {
+	float: left;
+	width: 550px;
 }
 
-.intro dt {
-	font-weight: bold;
-}
+#clear {
+	clear: both;
+} /*解决浮动元素脱离文档流*/
 
-.intro dd {
-	margin-bottom: 1em;
-}
-
-.rotten {
+#leftimg {
 	background-image: url(images/rottenbackground.png);
-	font-size: 8pt;
+	background-repeat: repeat-x;
 	color: white;
-}
-
-.rotten span {
-	font-weight: bold;
-	font-size: 48pt;
-	color: red;
-    vertical-align: top;
-}
-
-#bold {
 	font-size: 8pt;
+	vertical-align: middle;
+}
+
+#part {
+	color: red;
+	font-size: 48pt;
 	font-weight: bold;
+}
+
+#all {
+	vertical-align: 13px;
+}
+
+#leftc {
+	float: left;
+	width: 47%;
+	margin-left: 2%;
+}
+
+#rightc {
+	float: right;
+	width: 47%;
+	margin-right: 2%;
+}
+
+.words {
 	border: 2px gray solid;
-	padding: 8px;
 	background-color: #E1D697;
-	min-height: 25px;
+	font-weight: bold;
+	padding: 8px;
+	min-height: 24px;
 }
 
-#bold img {
-	float: left;
-	padding-right: 5px;
-}
-
-#italic span {
-	font-style: italic;
-}
-
-#italic img {
-	float: left;
-	padding-right: 5px;
-}
-
-.leftcomment, .rightcomment {
+.comment {
 	margin-bottom: 3em;
 }
 
-.leftc {
+.comment img {
 	float: left;
-	width: 47%;
-	padding-left: 2%;
+	margin-right: 5px;
 }
 
-.rightc {
-	float: right;
-	width: 47%;
-	padding-right: 2%;
+.comment span {
+	font-style: italic;
+}
+
+#right dl {
+	padding: 10px;
+	font-family: Arial;
+	margin: 0em;
+	background-color: #A2B964;
+}
+
+#right dt {
+	font-weight: bold;
+}
+
+#right dd {
+	margin-bottom: 1em;
 }
 
 #bottom {
 	text-align: center;
-	margin: 0px;
-	padding: 5px;
 	background-color: #A2B964;
+	padding: 5px;
+	margin: 0px;
+} /*如果段落用div的话……会形成块*/
+
+#html {
+	position: fixed;
+	right: 0px;
+	bottom: 33px;
+}
+
+#css {
+	position: fixed;
+	right: 0px;
+	bottom: 0px;
 }
