--- a/project/static/css/game.css
+++ b/project/static/css/game.css
@@ -1,6 +1,6 @@
 body {
 	background-attachment: fixed;
-	background-image: url(../images/background.jpg);
+	background-image: url(../images/index_bg.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: "微软雅黑";
