--- a/project/templates/game.html
+++ b/project/templates/game.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>中山大学大冒险 - 游戏页面</title>
 
-	<link rel="stylesheet" type="text/css" href="../static/css/game.css">
+	<link rel="stylesheet" type="text/css" href={{ static_url('css/game.css') }}>
 
 </head>
 <body>
