--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
         <title>中山大学大冒险</title>
-        <link rel="stylesheet" type="text/css" href="../static/css/index.css" />
+        <link rel="stylesheet" type="text/css" href={{static_url('css/demo.css')}} />
+        <link rel="stylesheet" type="text/css" href={{static_url('css/style1.css')}} />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		
     </head>
