--- a/project/static/css/demo.css
+++ b/project/static/css/demo.css
@@ -1,6 +1,6 @@
 body{
 	font-family: Constantia, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
-	background: #f8f8f8 url(../images/bg.jpg) repeat top left;
+	background: #f8f8f8 url(../images/login_bg.jpg) repeat top left;
 	font-weight: 400;
 	font-size: 15px;
 	color: #416c80;
