--- a/project/static/css/game.css
+++ b/project/static/css/game.css
@@ -1,6 +1,5 @@
 body {
 	background-attachment: fixed;
-	background-image: url(../images/index_bg.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: "微软雅黑";
@@ -18,7 +17,7 @@ body {
 	padding: 30px;
 	font-weight: bold;
 	font-size: 24px;
-	color: white;
+	color: black;
 	text-align: center;
 }
 
@@ -77,9 +76,4 @@ body {
 
 .cbtn {
 	width: 300px;
-}
-
-.ebtn {
-	width: 200px;
-	height: 50px;
 }
