there are bugs in saving...

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -22,7 +22,7 @@
                         </a>
                     </p>
                     <p>
-                        <a href="/continue" class="a_demo_one">
+                        <a href="/start" class="a_demo_one">
                             旧的回忆
                         </a>
                     </p>
