--- a/project/static/css/game.css
+++ b/project/static/css/game.css
@@ -6,7 +6,7 @@ body {
 }
 
 #navigation {
-	background-color: rgba(255, 256, 240, 0.3);
+	background-color: rgba(0, 0, 0, 0.3);
 	width: 100%;
 	height: 15%;
 	margin: 0;
@@ -26,6 +26,7 @@ body {
 	text-align: center;
 	position: absolute;
 	width: 30%;
+	height: 30%;
 	left: 35%;
 	top: 35%;
 }
@@ -33,14 +34,15 @@ body {
 #question {
 	color: #1C1C1C;
 	font-weight: bold;
+	height: 23%;
 }
 
 #choose {
-	color: blue;
+	height: 72%;
 }
 
 #footbar {
-	background-color: rgba(123, 104, 238, 0.3);
+	background-color: rgba(0, 0, 0, 0.3);
 	position: absolute;
 	text-align: center;
 	width: 100%;
@@ -49,9 +51,11 @@ body {
 }
 
 #plot {
-	color: #E0FFFF;
 	margin: auto;
-	width: 100%;
+	padding: 30px;
+	font-size: 15px;
+	color: white;
+	text-align: center;
 }
 
 #function {
@@ -60,7 +64,7 @@ body {
 
 .btn {
 	padding: 10px;
-	font-size: 12px;
+	font-size: 15px;
 	color: #fff;
 	border: solid 1px #186f8f;
 	background-image: -webkit-gradient(
@@ -75,5 +79,21 @@ body {
 }
 
 .cbtn {
-	width: 300px;
+	width: 80%;
+	height: 10%;
+}
+
+a {
+	text-decoration: none;
+	background-color: rgba(92, 172, 238, 0.5);
+	font-size: 12px;
+	color: rgba(255, 250, 205, 0.9);
+	padding: 10px 20px 10px 20px;
+	border-radius: 5px;
+	border: 1px solid rgba(54, 100, 139, 0.5);
+}
+
+.func {
+	margin-top: 10px;
+	margin-bottom: 16px;
 }
