--- a/project/templates/game.html
+++ b/project/templates/game.html
@@ -4,34 +4,106 @@
 		<meta charset="utf-8">
 		<title>中山大学大冒险 - 游戏页面</title>
 
+		<link rel="stylesheet" type="text/css" href={{ static_url('css/foundation.min.css') }}>
+		<link rel="stylesheet" type="text/css" href={{ static_url('css/general.css') }}>
 		<link rel="stylesheet" type="text/css" href={{ static_url('css/game.css') }}>
 		<script type="text/javascript" src={{ static_url('js/jquery-1.8.0.js') }}></script>
+		<script src={{ static_url('js/vendor/jquery.js') }}></script>
 		<script src={{ static_url('js/game.js') }} type="text/javascript"></script>
+
+		<style type="text/css">
+			body {
+				background: url(../static/images/img{{ backdrop }}.jpg);
+				background-size: 100% auto;
+			}
+			@media screen and (max-width: 600px) {
+  				body {
+  					background-size: auto 100%;
+    				background-position: 45% 0;
+ 	 			}
+
+  				#container {
+  					padding-top: 30%;
+  				}
+			}
+		</style>
+
 	</head>
-	<body background="../static/images/img{{ backdrop }}.jpg">
-		<div id="navigation">
-			<div id="title">中山大学大冒险</div>
-		</div>
-		<div id="container">
-				<div id="question">
-					<p id="question-text">你希望在大学里恋爱吗？</p>
+
+	<body>
+
+
+	<nav class="top-bar" data-topbar role="navigation">
+  		<ul class="title-area">
+    		<li class="name">
+      			<h1><a href="#">中山大学大冒险</a></h1>
+    		</li>
+
+    		<li class="toggle-topbar menu-icon"><a href="#"><span>{{user}}</span></a></li>
+  		</ul>
+
+  		<section class="top-bar-section">
+    		<ul class="right">
+        		<li class="has-dropdown">
+        			<a href="#">{{ user }}</a>
+        			<ul class="dropdown">
+          				<li><a href="/start">重新开始</a></li>
+          				<li class="active"><a href="/">回到首页</a></li>
+          				<li><a href="/save?background={{ backdrop }}">保存进度</a></li>
+          				<li><a href="/logout">退出游戏</a></li>
+        			</ul>
+      			</li>
+    		</ul>
+
+  		</section>
+	</nav> 
+
+		<div class="row" id="container">
+			<h4 class="small-12 large-4 large-centered small-centered columns" id="question-text">
+			你希望在大学里恋爱吗?
+			</h4>
+			<div class="row" id="choose">
+				<div class="small-6 large-5 large-centered small-centered columns">
+					<ul class="stack button-group radius">
+  						<li><a href="#" class="button cbtn radius" id="A">A. 希望</a></li>
+  						<li><a href="#" class="button cbtn radius" id="B">B. 不希望</a></li>
+  						<li><a href="#" class="button cbtn radius" id="C">C. 随缘</a></li>
+					</ul>
 				</div>
-				<div id="choose">
-					<div><button id="A" class="cbtn btn">A. 希望</button></div>
-					<div><button id="B" class="cbtn btn">B. 不希望</button></div>
-					<div><button id="C" class="cbtn btn">C. 随缘</button></div>
-				</div>
+			</div>
 		</div>
-		<div id="function">
-			<div class="func"><a href="/start">重新开始</a></div>
-			<div class="func"><a href="/save?background={{ backdrop }}">保存进度</a></div>
-			<div class="func"><a href="/index">回到首页</a></div>
-			<div class="func"><a href="/logout">退出游戏</a></div>
-		</div>
+
 		<div id="footbar">
 			<div id="plot">
 				<p id="plot-text">欢迎来到中山大学大冒险，请按任意处开启你的故事吧！</p>
 			</div>
 		</div>
+
+
+		
+		<script src="../static/js/foundation.min.js"></script>
+		<script src="../static/js/foundation/foundation.topbar.js"></script>
+		<script src="../static/js/foundation/foundation.dropdown.js"></script>
+
+		<script>
+
+    $(document).foundation('dropdown', {
+        activeClass: 'open'
+    });
+    $(document).foundation({
+  	accordion: {
+    // specify the class used for accordion panels
+    content_class: 'content',
+    // specify the class used for active (or open) accordion panels
+    active_class: 'active',
+    // allow multiple accordion panels to be active at the same time
+    multi_expand: false,
+    // allow accordion panels to be closed by clicking on their headers
+    // setting to false only closes accordion panels when another is opened
+    toggleable: true
+  	}
+ 	});
+
+		</script>
 	</body>
 </html>
