--- a/project/static/css/general.css
+++ b/project/static/css/general.css
@@ -98,6 +98,16 @@ a {
 	margin-bottom: 16px;
 }
 */
+body {
+	background-color: rgba(0, 0, 0, 0.5);
+}
+.tab-bar {
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.tab-bar-section ul {
+	background-color: rgba(0, 0, 0, 0.5);
+}
 
 .top-bar {
 	background-color: rgba(0, 0, 0, 0.5);
@@ -120,10 +130,12 @@ a {
 }
 #container{
 	padding-top: 5%;
-	height: 80%;
+	min-height: 80%;
+	width: 80%;
 }
 #container h4 {
-	color: white;
+	color: black;
+	font-weight: bold;
 }
 #choose a {
 	background-color: rgba(0, 0, 0, 0.5);
@@ -143,7 +155,7 @@ body{
 h2, h3, h4 {
 	color: white;
 	text-align: center;
-	padding: 3%;
+	padding: 1%;
 }
 
 .ie7 body{
@@ -155,6 +167,11 @@ h2, h3, h4 {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	min-height: 15%!important;
+	min-height: 13%!important;
 	height: auto;
+}
+
+.exit-off-canvas {
+	position: fixed;
+	bottom: 0;
 }
