--- a/project/templates/game.html
+++ b/project/templates/game.html
@@ -6,7 +6,6 @@
 
 		<link rel="stylesheet" type="text/css" href={{ static_url('css/foundation.min.css') }}>
 		<link rel="stylesheet" type="text/css" href={{ static_url('css/general.css') }}>
-		<link rel="stylesheet" type="text/css" href={{ static_url('css/game.css') }}>
 		<script type="text/javascript" src={{ static_url('js/jquery-1.8.0.js') }}></script>
 		<script src={{ static_url('js/vendor/jquery.js') }}></script>
 		<script src={{ static_url('js/game.js') }} type="text/javascript"></script>
@@ -15,6 +14,10 @@
 			body {
 				background: url(../static/images/img{{ backdrop }}.jpg);
 				background-size: 100% auto;
+				background-repeat: no-repeat;
+			}
+			#container {
+				height: 80%;
 			}
 			@media screen and (max-width: 600px) {
   				body {
@@ -33,7 +36,94 @@
 	<body>
 
 
-	<nav class="top-bar" data-topbar role="navigation">
+	<div class="off-canvas-wrap" data-offcanvas>
+	    <div class="inner-wrap">
+		<nav class="tab-bar">
+			<section class="left-small">
+				<a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+			</section>
+
+			<section class="middle tab-bar-section">
+				<h1 class="title">中山大学大冒险</h1>
+			</section>
+
+			<section class="right-small">
+				<span>{{ user }}</span>
+			 </section>
+
+		</nav>
+			<aside class="left-off-canvas-menu">
+				<ul class="off-canvas-list">
+					<li><a href="/start">重新开始</a></li>
+          			<li class="active"><a href="/">回到首页</a></li>
+          			<li><a href="/save?background={{ backdrop }}">保存进度</a></li>
+          			<li><a href="/logout">退出游戏</a></li>
+				</ul>
+			</aside>
+
+
+			<div class="main-section">
+				<div id="filler">
+				<div class="row" id="container">
+					<h4 class="small-12 large-4 large-centered small-centered columns" id="question-text">
+						你希望在大学里恋爱吗?
+					</h4>
+					<div class="row" id="choose">
+						<div class="small-6 large-5 large-centered small-centered columns">
+							<ul class="stack button-group radius">
+  								<li><a href="#" class="button cbtn radius" id="A">A. 希望</a></li>
+  								<li><a href="#" class="button cbtn radius" id="B">B. 不希望</a></li>
+  								<li><a href="#" class="button cbtn radius" id="C">C. 随缘</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				
+				<div id="footbar">
+					<div id="plot">
+						<p id="plot-text">欢迎来到中山大学大冒险，请狠狠地点击黑框任意处开启你的故事吧！(温馨提示:要通过点击黑框触发剧情哦）</p>
+					</div>
+				</div>
+				</div>
+			</div>
+			<a class="exit-off-canvas"></a>
+
+		</div> 
+	</div>
+
+
+
+
+
+
+
+
+
+
+<!--
+
+	<div class = "off-canvas-wrap" data-offcanvas>
+	<div class="inner-wrap">
+	<nav class="tab-bar" >
+		<section class="left-small">
+			<a class="left-off-canvas-toggle menu-icon" href="#"><span>{{ user }}</span></a>
+		</section>
+
+		<section class="middle tab-bar-section">
+			<h1>中山大学大冒险</h1>
+		</section>
+
+		<aside class="left-off-canvas-menu">
+			<ul class="off-canvas-list">
+						<li><label>{{user}}</label></li>
+          				<li><a href="/start">重新开始</a></li>
+          				<li class="active"><a href="/">回到首页</a></li>
+          				<li><a href="/save?background={{ backdrop }}">保存进度</a></li>
+          				<li><a href="/logout">退出游戏</a></li>
+        	</ul>
+		</aside>
+		</nav>
+		
   		<ul class="title-area">
     		<li class="name">
       			<h1><a href="#">中山大学大冒险</a></h1>
@@ -56,8 +146,9 @@
     		</ul>
 
   		</section>
-	</nav> 
-
+  		
+	
+		<section class="main-section">
 		<div class="row" id="container">
 			<h4 class="small-12 large-4 large-centered small-centered columns" id="question-text">
 			你希望在大学里恋爱吗?
@@ -75,18 +166,26 @@
 
 		<div id="footbar">
 			<div id="plot">
-				<p id="plot-text">欢迎来到中山大学大冒险，请按任意处开启你的故事吧！</p>
+				<p id="plot-text">欢迎来到中山大学大冒险，请狠狠地点击黑框任意处开启你的故事吧！(温馨提示:要通过点击黑框触发剧情哦）</p>
 			</div>
 		</div>
+		
+		</section>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<a class="exit-off-canvas"></a>
+	</div>
+	</div>
+-->
 
 
 		
 		<script src="../static/js/foundation.min.js"></script>
 		<script src="../static/js/foundation/foundation.topbar.js"></script>
 		<script src="../static/js/foundation/foundation.dropdown.js"></script>
+		<script src="../static/js/foundation/foundation.offcanvas.js"></script>
 
 		<script>
-
+	$(document).foundation();
     $(document).foundation('dropdown', {
         activeClass: 'open'
     });
