--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -11,7 +11,7 @@
 		
     </head>
     <body>
-    <div class="container">
+    <div class="row">
         <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
@@ -23,7 +23,6 @@
             <ul class="right">
                 <li>
                     <a href="#">{{ user }}</a>
-                    
                 </li>
             </ul>
 
@@ -48,6 +47,6 @@
                 </div>
             </div>
 		</div>
-        </div>
+    </div>
     </body>
 </html>
