--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
   <head>
     <meta charset="utf-8">
-    <title>主页</title>
+    <title>中山大学大冒险错误页面</title>
 
     <link rel="stylesheet" type="text/css" href="{{ static_url('css/404.css') }}">
 
