--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -11,6 +11,7 @@
     <script src={{ static_url('js/vendor/jquery.js') }}></script>
     <script src="../static/js/foundation.min.js"></script>
     <script src="../static/js/foundation/foundation.abide.js"></script>
+    
   </head>
   <body>
 
@@ -53,6 +54,7 @@
     </div>
     </div>
 
+    <div id="copyright">&copy;2015 DDL.All rights reserved</div>
     <script>
     $(document).foundation();
     </script>
