--- a/project/templates/game.html
+++ b/project/templates/game.html
@@ -2,33 +2,53 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>中山大学大冒险 - 游戏页面</title>
 
 		<link rel="stylesheet" type="text/css" href={{ static_url('css/foundation.min.css') }}>
-		<link rel="stylesheet" type="text/css" href={{ static_url('css/general.css') }}>
+		<link rel="stylesheet" type="text/css" href={{ static_url('css/game.css') }}>
 		<script type="text/javascript" src={{ static_url('js/jquery-1.8.0.js') }}></script>
 		<script src={{ static_url('js/vendor/jquery.js') }}></script>
 		<script src={{ static_url('js/game.js') }} type="text/javascript"></script>
 
 		<style type="text/css">
 			body {
-				background: url(../static/images/img{{ backdrop }}.jpg);
-				background-size: 100% auto;
-				background-repeat: no-repeat;
+				background-image: url(../static/images/img{{ backdrop }}.jpg);
 			}
-			#container {
-				height: 80%;
-			}
-			@media screen and (max-width: 600px) {
+
+			@media screen and (max-width: 580px) {
   				body {
   					background-size: auto 100%;
-    				background-position: 45% 0;
+    				background-position: 45% 0%;
+    				background-repeat: no-repeat;
+ 	 			}
+ 	 			#container {
+  					padding-top: 30%;
+  				}
+  				#gameover {
+					margin: auto;
+					padding-top: 50%;
+				}
+ 	 		}
+ 	 		@media screen and (min-width: 580px) {
+  				body {
+  					background-size: 100% auto;
+    				background-position: 50% 0%;
+    				background-repeat: no-repeat;
+    				background-color: rgba(0, 0, 0, 0.5);
  	 			}
 
   				#container {
-  					padding-top: 30%;
+  					padding-top: 5%;
   				}
-			}
+
+  				#gameover {
+					margin: auto;
+					padding-top: 15%;
+				}
+  			}
+  			
 		</style>
 
 	</head>
@@ -64,12 +84,12 @@
 
 			<div class="main-section">
 				<div id="filler">
-				<div class="row" id="container">
+				<div class="row" id="container" style="display: none">
 					<h4 class="small-12 large-4 large-centered small-centered columns" id="question-text">
 						你希望在大学里恋爱吗?
 					</h4>
 					<div class="row" id="choose">
-						<div class="small-6 large-5 large-centered small-centered columns">
+						<div class="small-6 large-4 large-centered small-centered columns">
 							<ul class="stack button-group radius">
   								<li><a href="#" class="button cbtn radius" id="A">A. 希望</a></li>
   								<li><a href="#" class="button cbtn radius" id="B">B. 不希望</a></li>
@@ -77,6 +97,14 @@
 							</ul>
 						</div>
 					</div>
+				</div>
+
+				<div id="gameover" style="display: none">
+				<div class="row">
+					<form id="restart" class="large-2 small-5 large-centered small-centered columns" class="box" action="/start" method="get">
+						<input class="small-centered large-centered columns" type="submit" value="重新开始">
+					</form>
+				</div>
 				</div>
 				
 				<div id="footbar">
@@ -90,93 +118,6 @@
 
 		</div> 
 	</div>
-
-
-
-
-
-
-
-
-
-
-<!--
-
-	<div class = "off-canvas-wrap" data-offcanvas>
-	<div class="inner-wrap">
-	<nav class="tab-bar" >
-		<section class="left-small">
-			<a class="left-off-canvas-toggle menu-icon" href="#"><span>{{ user }}</span></a>
-		</section>
-
-		<section class="middle tab-bar-section">
-			<h1>中山大学大冒险</h1>
-		</section>
-
-		<aside class="left-off-canvas-menu">
-			<ul class="off-canvas-list">
-						<li><label>{{user}}</label></li>
-          				<li><a href="/start">重新开始</a></li>
-          				<li class="active"><a href="/">回到首页</a></li>
-          				<li><a href="/save?background={{ backdrop }}">保存进度</a></li>
-          				<li><a href="/logout">退出游戏</a></li>
-        	</ul>
-		</aside>
-		</nav>
-		
-  		<ul class="title-area">
-    		<li class="name">
-      			<h1><a href="#">中山大学大冒险</a></h1>
-    		</li>
-
-    		<li class="toggle-topbar menu-icon"><a href="#"><span>{{user}}</span></a></li>
-  		</ul>
-
-  		<section class="top-bar-section">
-    		<ul class="right">
-        		<li class="has-dropdown">
-        			<a href="#">{{ user }}</a>
-        			<ul class="dropdown">
-          				<li><a href="/start">重新开始</a></li>
-          				<li class="active"><a href="/">回到首页</a></li>
-          				<li><a href="/save?background={{ backdrop }}">保存进度</a></li>
-          				<li><a href="/logout">退出游戏</a></li>
-        			</ul>
-      			</li>
-    		</ul>
-
-  		</section>
-  		
-	
-		<section class="main-section">
-		<div class="row" id="container">
-			<h4 class="small-12 large-4 large-centered small-centered columns" id="question-text">
-			你希望在大学里恋爱吗?
-			</h4>
-			<div class="row" id="choose">
-				<div class="small-6 large-5 large-centered small-centered columns">
-					<ul class="stack button-group radius">
-  						<li><a href="#" class="button cbtn radius" id="A">A. 希望</a></li>
-  						<li><a href="#" class="button cbtn radius" id="B">B. 不希望</a></li>
-  						<li><a href="#" class="button cbtn radius" id="C">C. 随缘</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-
-		<div id="footbar">
-			<div id="plot">
-				<p id="plot-text">欢迎来到中山大学大冒险，请狠狠地点击黑框任意处开启你的故事吧！(温馨提示:要通过点击黑框触发剧情哦）</p>
-			</div>
-		</div>
-		
-		</section>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		<a class="exit-off-canvas"></a>
-	</div>
-	</div>
--->
-
 
 		
 		<script src="../static/js/foundation.min.js"></script>
